# sistemas-fichas-desktop

./: .gitignore  ARQUITETURA_VISUAL.md  CACHE_README.md  CHECKLIST_IMPLEMENTACAO.md  COMO_USAR_COM_TAURI.md  CONFIGURACAO_API_ADMIN.md  CONFIGURACAO_FINAL_ATUALIZACAO.md  CONFIGURACAO_REDE_CONF.md  CONFIGURACAO_REDE_PRONTA.md  CONFIGURACAO_TAURI.md  DEBUG_ENDPOINT_PEDIDOS.md  DEBUG_ERRO_API.md  DEMO_NOVO_SISTEMA.md  DEMO_SISTEMA_VALIDACAO.md  DIAGRAMA_FLUXO_SINCRONIZACAO.md  DOCUMENTACAO_SISTEMA.md  FUNCIONALIDADES_ADMIN_COMPLETO.md  GUIA_DESENVOLVIMENTO.md  GUIA_INSTALACAO_CLIENTES.md  GUIA_INTEGRACAO_API.md  GUIA_RAPIDO_ATUALIZACAO.md  GUIA_RAPIDO_REDE.md  GUIA_RAPIDO_SINCRONIZACAO.md  GUIA_TEMAS_CONFIGURACOES.md  GUIA_USO_LOCK.md  INDICE_DOCUMENTACAO.md  INDICE_SINCRONIZACAO.md  MELHORIAS_DESIGN_PROFISSIONAL.md  MELHORIAS_FORMULARIO_PEDIDO.md  MELHORIAS_SISTEMA_COMPLETO.md  MIGRACAO_CONCLUIDA.md  MIGRACAO_RUST.md  OTIMIZACOES_PERFORMANCE.md  OTIMIZACOES_PERFORMANCE_IMPLEMENTADAS.md  PAGINA_ADMIN_IPS.md  README.md  README_CONFIGURACAO_RAPIDA.md  RESOLVER_CACHE.md  RESUMO_EXECUTIVO.md  RESUMO_SINCRONIZACAO_IMPLEMENTADA.md  (+42 more)
config/: api-config.example.json  api-config.json
documentation/: ATUALIZACAO_FORMULARIOS_APENAS_COMPLETOS.md  CONFIGURACAO_REDE_MULTIPLOS_COMPUTADORES.md  CONFIGURACAO_UVICORN.md  CUSTOM_CHECKBOX_LABELS.md  DEBUG_API.md  DEBUG_PEDIDOS.md  DEMO_NOVO_SISTEMA.md  DOCUMENTACAO_SISTEMA.md  FORMULARIO_PAINEL_COMPLETO.md  FORMULARIO_TOTEM_COMPLETO.md  FUNCIONALIDADES_ADMIN_COMPLETO.md  GUIA_DESENVOLVIMENTO.md  GUIA_INTEGRACAO_API.md  GUIA_RAPIDO_FORMULARIOS.md  (+25 more)
public/: rede.conf
rust-performance/: Cargo.toml  build.sh
rust-performance/pkg/: sgp_performance.js
rust-performance/src/: lib.rs
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  clientes.db  env.example  tauri.conf.json
src-tauri/data/: clientes.db  clientes.db-shm  clientes.db-wal
src-tauri/resources/: api-config.json
src-tauri/src/: commands_seaorm.rs  database_new.rs  database_orm.rs  lib.rs  main.rs  updater.rs
src-tauri/src/commands/: cliente.rs  desconto.rs  designer.rs  envio.rs  limpeza.rs  mod.rs  pagamento.rs  pedido.rs  producao.rs  relatorio.rs  tecido.rs  vendedor.rs
src-tauri/src/database/: mod.rs
src-tauri/src/entities/: cliente.rs  desconto.rs  designer.rs  forma_envio.rs  forma_pagamento.rs  mod.rs  pedido.rs  produto.rs  tecido.rs  tipo_producao.rs  vendedor.rs
src-tauri/src/models/: cliente.rs  desconto.rs  designer.rs  envio.rs  mod.rs  pagamento.rs  pedido.rs  producao.rs  relatorio.rs  tecido.rs  vendedor.rs
(+294 files in other folders)
