[package]
name = "sgp-performance"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "NodeList",
  "Text",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
