[package]
name = "react_tauri_app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[profile.dev]
incremental = true
debug = true
opt-level = 0

[profile.release]
# Otimizações para produção
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false

# Reduzir tamanho do binário
[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "react_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database - SeaORM com suporte completo
sea-orm = { version = "0.12", features = [
    "sqlx-postgres", 
    "sqlx-sqlite", 
    "runtime-tokio-rustls", 
    "macros",
    "with-chrono",
    "with-uuid"
] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite", 
    "chrono",
    "uuid"
] }

# SQLite para compatibilidade (usando mesma versão do sqlx)
rusqlite = { version = "0.30", features = ["bundled"] }

# Outras dependências
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
csv = "1.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
dotenvy = "0.15"


